--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 <body>
 	<div class="mdiv" >
 		<div class="container">
-			
-			<div class="clock">
+			<h2 align="center">Today's Quote</h2>
+			<h1 align="center">Lost time is Never Found Again</h1>
+						<div class="clock">
 <h1 class="head" id="tm" align="center"></h1>
 </div>
 </div>
